# ClimFinRIsk

./: LICENSE  README.md  debug_risk_calculation.py  pyproject.toml  requirements.txt  test_data_integration.py  test_integration.py  test_live_mapping.py
climfinrisk/: __init__.py  core.py
climfinrisk/data/: __init__.py  ingestion.py  preprocessor.py  real_world_sources.py  validators.py
climfinrisk/geospatial/: __init__.py  spatial_analyzer.py
climfinrisk/modeling/: __init__.py  dimensionality_reduction.py  risk_estimation.py  vulnerability_curves.py
climfinrisk/utils/: __init__.py  config.py  helpers.py  logger.py  validators.py
examples/: advanced_demo.py
resources/: industry_network_map.md  innovative_ideas.md  open_source_data_sources.md  research_papers_and_models.md
